Use theme variables instead of constants

--- a/assets/scss/components/foundation/type/_type.scss
+++ b/assets/scss/components/foundation/type/_type.scss
@@ -39,7 +39,7 @@ cite {
     font-size: 20px;
     line-height: 1.2;
     -webkit-font-smoothing: antialiased;
-    color: #0A0A0A;
+    color: stencilColor("navUser-color");
     margin-top: 20px;
     margin-bottom: 10px;
     font-weight: 700;
