--- a/assets/scss/fonts/_fonts.scss
+++ b/assets/scss/fonts/_fonts.scss
@@ -1,31 +1,31 @@
 @font-face {
   font-family: "Helvetica";
   font-style: normal;
-  font-weight: 300;
+  font-weight: fontWeight("thin");
   src: url("../fonts/HelveticaNeue-Thin.woff") format("woff");
 }
 
 @font-face {
   font-family: "Helvetica";
   font-style: normal;
-  font-weight: 500;
+  font-weight: fontWeight("normal");
   src: url("../fonts/HelveticaNeue-Light.woff") format("woff");
 }
 @font-face {
   font-family: "Helvetica";
   font-style: normal;
-  font-weight: 600;
+  font-weight: fontWeight("semibold");
   src: url("../fonts/HelveticaNeue-Medium.woff") format("woff");
 }
 @font-face {
   font-family: "Helvetica";
   font-style: normal;
-  font-weight: 700;
+  font-weight: fontWeight(bold);
   src: url("../fonts/HelveticaNeue-Bold.woff") format("woff");
 }
 @font-face {
   font-family: "Helvetica";
   font-style: normal;
-  font-weight: 900;
+  font-weight: fontWeight(black);
   src: url("../fonts/HelveticaNeue-Black.woff") format("woff");
 }
