--- a/assets/scss/layouts/body/_body.scss
+++ b/assets/scss/layouts/body/_body.scss
@@ -16,7 +16,7 @@
 
     @include breakpoint("medium") {
         margin-top: 0;
-        padding-top: 70px;
+        padding-top: spacing("double") * 1.6;
         margin-bottom: 0;
     }
 }
