--- a/assets/scss/maintenance.scss
+++ b/assets/scss/maintenance.scss
@@ -10,9 +10,9 @@ body {
   height: 100vh;
   line-height: 1.5em;
   margin: 0;
-  min-width: 320px;
-  min-height: 480px;
-  padding: 20px 30px;
+  min-width: remCalc(320);
+  min-height: remCalc(480);
+  padding: remCalc(20) remCalc(30);
 
   -ms-box-orient: horizontal;
   display: -webkit-flex;
@@ -31,11 +31,11 @@ main {
   box-shadow: 0 2px 0 0 rgba(0,0,0,0.07);
   background-color: #fff;
   display: block;
-  padding: 20px 30px;
+  padding: remCalc(20) remCalc(30);
   text-align: center;
 }
 section {
-  margin-bottom: 40px;
+  margin-bottom: remCalc(40);
 }
 fieldset {
   border: none;
@@ -44,62 +44,62 @@ fieldset {
 legend {
   overflow: hidden;
   position: absolute !important;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
+  width: remCalc(1);
+  height: remCalc(1);
+  margin: remCalc(-1);
   padding: 0;
   border: 0;
   clip: rect(0 0 0 0);
 }
 label, input {
   display: block;
-  height: 30px;
-  line-height: 30px;
+  height: remCalc(30);
+  line-height: remCalc(30);
   width: 100%;
 }
 label {
   color: #313b47;
-  font-size: 14px;
-  font-weight: bold;
+  font-size: fontSize("base");
+  font-weight: fontWeight("bold");
   text-align: center;
 }
 input {
-  border-radius: 2px;
-  border-style:solid;
+  border-radius: remCalc(2);
+  border-style: solid;
   width: 100%;
   -webkit-appearance: none;
 }
 input[type=text] {
   background-color: #F7F8F9;
   border: 1px solid #E1E6EB;
-  margin-bottom: 1rem;
-  padding: 0 1em;
+  margin-bottom: fontSize("base");
+  padding: 0 fontSize("base");
 }
 input[type=submit] {
   cursor: pointer;
   background: #00abc9;
   border: none;
   color: #fff;
-  font-size: 12px;
-  padding: 0 15px;
+  font-size: fontSize("base") * .9;
+  padding: 0 fontSize("base");
 }
 a {
   text-decoration: none;
   color: #00b9d3;
-  margin: 0 5px;
+  margin: 0 stencilNumber("padding-small") * .5;
 }
 h1 {
   color: #3C4043;
-  font-weight: 300;
-  font-size: 24px;
-  margin-top: 15px;
+  font-weight: fontWeight("thin");
+  font-size: remCalc(24);
+  margin-top: stencilNumber("padding-normal");
 }
 div p {
   margin-top: 0;
   margin-bottom: 0;
 }
 .form-field--error {
-  margin-bottom: 1rem;
+  margin-bottom: fontSize("base");
 }
 .form-field--error input[type=text] {
   margin-bottom: 0;
@@ -111,17 +111,17 @@ div p {
 }
 .powered-by {
   color: #acb3be;
-  font-size: 11px;
+  font-size: fontSize("base") * 0.8;
   font-style: italic;
-  line-height: 24px;
+  line-height: lineHeight("large");
 }
 .powered-by a {
   background: url('../img/bc_logo_sprite.png') 0 -75px no-repeat;
   display: inline-block;
-  height: 22px;
+  height: remCalc(22);
   opacity: .7;
-  text-indent: -9999px;
-  width: 95px;
+  text-indent: remCalc(-9999);
+  width: remCalc(95);
 }
 .powered-by a:hover {
   opacity: 1;
@@ -132,19 +132,19 @@ div p {
   }
   main {
     margin: 0 auto;
-    padding: 45px 60px;
-    width: 500px;
+    padding: remCalc(45) remCalc(60);
+    width: remCalc(500);
   }
   label, input {
     display: inline-block;
-    margin-right: 10px;
+    margin-right: stencilNumber("padding-small");
     width: auto;
   }
   label {
     text-align: left;
   }
   input[type=text] {
-    margin-right: 10px;
+    margin-right: stencilNumber("padding-normal");
     margin-bottom: 0;
   }
   .form-field {
@@ -153,9 +153,9 @@ div p {
   }
   .form-field--error .form-inlineMessage {
     /*color: #ac0005;*/
-    left: 100px;
+    left: remCalc(100);
     position: absolute;
-    top: 30px;
+    top: remCalc(30);
     /*width: 100%;*/
   }
 }
