Update components scss constants with theme scss functions and variables

--- a/assets/scss/components/stencil/account/_account.scss
+++ b/assets/scss/components/stencil/account/_account.scss
@@ -73,7 +73,7 @@
     flex-direction: column;
     margin: 0 spacing("single") + spacing("third") 0 0;
     position: relative;
-    width: 70px;
+    width: remCalc(70px);
 
     @include lazy-loaded-padding('productthumb_size');
 }
