--- a/assets/scss/components/stencil/heroCarousel/_heroCarousel.scss
+++ b/assets/scss/components/stencil/heroCarousel/_heroCarousel.scss
@@ -46,18 +46,18 @@
     }
 
     .slick-next {
-        right: 15px;
+        right: stencilNumber('padding-normal');
 
         @include breakpoint("medium") {
-            right: 25px;
+            right: stencilNumber('padding-small') * 2.5;
         }
     }
 
     .slick-prev {
-        left: 15px;
+        left: stencilNumber('padding-normal');
 
         @include breakpoint("medium") {
-            left: 25px;
+            left: stencilNumber('padding-small') * 2.5;
         }
     }
 
