--- a/assets/scss/components/stencil/paymentMethods/_paymentMethods.scss
+++ b/assets/scss/components/stencil/paymentMethods/_paymentMethods.scss
@@ -60,7 +60,7 @@
 // Payment Method
 // -----------------------------------------------------------------------------
 //
-// 1. Redefine the font-size as we're removing white-space on the parent by
+// 1. Redefine the font-size as we're removing stencilColor('color-white')-space on the parent by
 //    reducing the size to 0.
 // 2. Adding a min-height to improve the consistency of the paymentMethod blocks.
 //
@@ -99,7 +99,7 @@
 
 .paymentMethod-card {
     align-items: center;
-    background: white;
+    background: stencilColor('color-white');
     padding: spacing("half");
 
     @include breakpoint("large") {
