--- a/assets/scss/components/stencil/productCarousel/_productCarousel.scss
+++ b/assets/scss/components/stencil/productCarousel/_productCarousel.scss
@@ -9,7 +9,7 @@
 // -----------------------------------------------------------------------------
 
 .productCarousel { // 1
-    width: 1px;
+    width: remCalc(1px);
     min-width: 100%;
     @include grid-row(
         $behavior: nest
