--- a/assets/scss/components/stencil/socialLinks/_socialLinks.scss
+++ b/assets/scss/components/stencil/socialLinks/_socialLinks.scss
@@ -41,7 +41,7 @@
 
 // scss-lint:disable SelectorFormat
 .socialLinks-item--pinterest {
-    width: 25px;
+    width: remCalc(25px);
 }
 // scss-lint:enable SelectorFormat
 
