--- a/assets/scss/components/stencil/textTruncate/_textTruncate.scss
+++ b/assets/scss/components/stencil/textTruncate/_textTruncate.scss
@@ -14,7 +14,7 @@
 }
 
 .js .textTruncate {
-    max-height: 110px;
+    max-height: remCalc(110px);
     overflow: hidden;
 }
 
@@ -25,7 +25,7 @@
 .textTruncate-viewMore {
     background-color: stencilColor("body-bg");
     bottom: 0;
-    padding-top: 10px;
+    padding-top: stencilNumber("padding-small");
     position: absolute;
     width: 100%;
 }
