--- a/assets/scss/components/stencil/toggleLink/_toggleLink.scss
+++ b/assets/scss/components/stencil/toggleLink/_toggleLink.scss
@@ -30,7 +30,7 @@ $toggle-spacing: spacing("single") + spacing("half");
 
     .toggle-title & {
         float: right;
-        line-height: 24px;
+        line-height: lineHeight("large");
     }
 }
 
