--- a/assets/scss/components/stencil/homeIntro/_component.scss
+++ b/assets/scss/components/stencil/homeIntro/_component.scss
@@ -1,14 +1,14 @@
 .home-intro {
-  padding: 24px 0;
+  padding: stencilNumber("padding-small") * 2.4 0;
 
   @include breakpoint("medium") {
-    padding: 24px;
+    padding: stencilNumber("padding-small") * 2.4;
   }
 
   h1 {
-    font-weight: 700;
-    font-size: 24px;
-    line-height: 1.2;
+    font-weight: fontWeight("bold");
+    font-size: $fontSize-root * 1.5;
+    line-height: lineHeight("small");
     -webkit-font-smoothing: antialiased;
     margin: 0;
   }
