--- a/assets/scss/components/stencil/homeMantra/_component.scss
+++ b/assets/scss/components/stencil/homeMantra/_component.scss
@@ -1,30 +1,30 @@
 .mantra {
   background-color: stencilColor("navUser-color");
-  padding: 40px;
-  color: white;
+  padding: stencilNumber("padding-small") * 4;
+  color: stencilColor('color-white');
 
   p {
-    margin: 0 0 10px;
-    color: white;
+    margin: 0 0 stencilNumber("padding-small");
+    color: stencilColor('color-white');
   }
   
   h3 {
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.2;
-    letter-spacing: .5px;
+    font-weight: fontWeight("bold");
+    font-size: fontSize("largest");
+    line-height: lineHeight("small");
+    letter-spacing: letterSpacing("large") * .5;
     -webkit-font-smoothing: antialiased;
     margin-top: 1.5rem;
     text-transform: uppercase;
-    color: #fff;
+    color: stencilColor('color-white');
   }
 
   h4 {
-    font-size: 14px;
-    line-height: 1.2;
-    letter-spacing: .5px;
-    font-weight: 400;
-    color: #fff;
+    font-size: fontSize("base");
+    line-height: lineHeight("small");
+    letter-spacing: letterSpacing("large") * .5;
+    font-weight: fontWeight("normal");
+    color: stencilColor('color-white');
     margin-top: 1rem;
   }
 }
