--- a/assets/scss/components/stencil/navPages/_navPages.scss
+++ b/assets/scss/components/stencil/navPages/_navPages.scss
@@ -155,13 +155,13 @@
 
     .navPages-action-moreIcon {
         border: solid 1px $navPages-action-moreIcon-borderColor;
-        border-radius: 4px;
+        border-radius: remCalc(4px);
         float: left;
-        height: 35px;
-        margin-top: -10px;
-        padding: 11.7px; // (33 - 9.6) / 2
+        height: remCalc(35px);
+        margin-top: stencilNumber('padding-small') * -1;
+        padding: remCalc(11.7px); // (33 - 9.6) / 2
         transform: rotate(90deg);
-        width: 35px;
+        width: remCalc(35px);
 
         @include breakpoint("medium") {
             @include square(8px);
@@ -175,8 +175,8 @@
     }
 
     svg {
-        height: 9.6px;
-        width: 9.6px;
+        height: remCalc(9.6px);
+        width: remCalc(9.6px);
 
         @include breakpoint("medium") {
             height: 100%;
@@ -370,7 +370,7 @@
         .navPage-subMenu-action:hover {
             background: $navPage-subMenu-item--is-highlighted-background;
             color: $navPage-subMenu-item--is-highlighted-color;
-            font-weight: 500;
+            font-weight: fontWeight("bold");
             opacity: 0.3;
         }
     }
