--- a/assets/scss/components/stencil/previewCart/_previewCart.scss
+++ b/assets/scss/components/stencil/previewCart/_previewCart.scss
@@ -66,7 +66,7 @@
 .previewCartCheckout-price {
     display: block;
     font-size: fontSize("largest");
-    font-weight: bold;
+    font-weight: fontWeight("bold");
     text-align: center;
 }
 
