--- a/assets/scss/components/stencil/productView/_productView.scss
+++ b/assets/scss/components/stencil/productView/_productView.scss
@@ -41,7 +41,7 @@
     position: relative;
 
     @include breakpoint("medium") {
-        min-height: 366px;
+        min-height: remCalc(366px);
         min-width: inherit;
     }
 
@@ -483,7 +483,7 @@
 
     .form-label {
         text-align: left;
-        top: -2px; // 1
+        top: remCalc(-2px); // 1
     }
 }
 
