--- a/assets/scss/components/stencil/productView/_productView.scss
+++ b/assets/scss/components/stencil/productView/_productView.scss
@@ -7,7 +7,12 @@
 // -----------------------------------------------------------------------------
 
 .productView {
-    padding-top: spacing("base");
+    padding-top: 0;
+    margin: 0 !important;
+
+    @include breakpoint("medium") {
+        padding-top: spacing("base");
+    }
 }
 
 
@@ -16,6 +21,11 @@
 
 .productView-images {
     margin-bottom: spacing("double");
+    display: none;
+
+    @include breakpoint("medium") {
+        display: block;
+    }
 }
 
 .productView-image {
@@ -410,5 +420,93 @@
     img {
         max-width: none;
         width: auto;
+    }
+}
+
+#pdp-mobile-flexslider {
+    & .feature-row__image {
+        display: none;
+    }
+
+    & .feature-row:first-of-type .feature-row__image {
+        display: block;
+    }
+
+    &.slick-initialized .feature-row__image {
+        display: block;
+    }
+
+    .slick-dots {
+        bottom: 10px;
+        position: absolute;
+
+        li.slick-active button:before {
+            opacity: 1;
+            color: white;
+            font-size: 10px;
+        }
+    }
+    .slick-arrow {
+        display: none !important;
+    }
+}
+
+.pdp-mobile-zoomCtrl {
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    width: 35px;
+    height: 35px;
+    line-height: 35px;
+    font-size: 16px;
+    text-align: center;
+    background: #fff;
+    z-index: 1;
+    cursor: pointer;
+    padding: 8px;
+}
+
+.mobile-zoom-container {
+    height: 100%;
+    width: 100%;
+    position: fixed;
+    left: 0;
+    top: 0;
+    z-index: 2000 !important;
+    background-color: #000;
+    overflow: hidden;
+    padding: 0;
+    cursor: move;
+
+    &.hidden {
+        display: none;
+    }
+
+    .mobile-zoomviewer-image {
+        backface-visibility: hidden;
+        cursor: move;
+        transition: none 0s ease 0s;
+        min-height: 100vh;
+        height: 800px;
+        width: auto;
+        min-width: 100vw;
+        max-width: unset;
+        left: 0;
+        pointer-events: none;
+        position: relative;
+        top: 0;
+        -moz-user-select: none;
+    }
+}
+
+.productView-mobile-images {
+    display: block;
+
+    .image-viewer {
+        position: relative;
+    }
+
+    @include breakpoint("medium") {
+        display: none;
     }
 }
