Add info section

--- a/templates/components/products/product-view.html
+++ b/templates/components/products/product-view.html
@@ -127,8 +127,11 @@
                     {{/if}}
                 {{/if}}
             </form>
+            <p class="text-left">100% Guaranteed Fit. Free US Shipping + Returns.</p>
+            <div class="pdp-fit-links text-left">
+                <a href="#">Can't Find Your Size?</a>
+            </div>
         </div>
-        {{> components/common/share}}
     </section>
 
     <article class="productView-description"{{#if schema}} itemprop="description"{{/if}}>
