Update desktop layout of PDP details

--- a/templates/components/products/description-tabs.html
+++ b/templates/components/products/description-tabs.html
@@ -7,11 +7,11 @@
             <a class="tab-title" href="#tab-{{dashcase (lowercase (sanitize theme_settings.pdp-custom-fields-tab-label))}}">{{sanitize theme_settings.pdp-custom-fields-tab-label}}</a>
         </li>
     {{/all}}
-    {{#all settings.show_product_reviews theme_settings.show_product_reviews_tabs product.reviews.total}}
+    <!-- {{#all settings.show_product_reviews theme_settings.show_product_reviews_tabs product.reviews.total}}
         <li class="tab">
             <a class="tab-title productView-reviewTabLink" href="#tab-reviews">{{lang 'products.reviews.header' total=product.reviews.total}}</a>
         </li>
-    {{/all}}
+    {{/all}} -->
 </ul>
 <div class="tabs-contents">
     <div class="tab-content is-active" id="tab-description">
