--- a/assets/scss/components/stencil/productView/_productView.scss
+++ b/assets/scss/components/stencil/productView/_productView.scss
@@ -12,6 +12,8 @@
 
     @include breakpoint("medium") {
         padding-top: spacing("base");
+        max-width: remCalc(960px) !important;
+        margin: auto !important;
     }
 }
 
@@ -133,8 +135,8 @@
 
 .productView-product {
     @include breakpoint("medium") {
-        border-bottom: container("border");
-        padding-bottom: spacing("single") + spacing("third");
+        border-bottom: none;
+        padding-bottom: spacing("single");
     }
 
     > :last-child {
@@ -152,10 +154,11 @@
 
     @include breakpoint("medium") {
         margin-top: spacing("single");
+        font-size: remCalc(20);
     }
 
     @include breakpoint("large") {
-        font-size: fontSize("largest");
+        font-size: fontSize("large");
     }
 }
 
@@ -206,6 +209,9 @@
         border: 0;
         color: inherit;
         font-size: inherit;
+    }
+    .price {
+        font-size: fontSize("smaller");
     }
 }
 
@@ -388,12 +394,13 @@
         @include breakpoint("medium") {
             float: none;
             padding: 0;
-            width: auto;
+            width: 100%;
         }
 
         @include breakpoint("large") {
             display: inline-block;
             margin-top: 1rem;
+            width: 100%;
         }
 
         // scss-lint:disable SelectorDepth, NestingDepth
@@ -412,7 +419,6 @@
 
             @include breakpoint("large") {
                 margin-right: spacing("half");
-                width: auto;
             }
         }
     }
