--- a/templates/components/products/price.html
+++ b/templates/components/products/price.html
@@ -49,18 +49,9 @@ If you are making a change here or in price-range.html, you probably want to mak
                 {{price.rrp_without_tax.formatted}}
             </span>
         </div>
-        <div class="price-section price-section--withoutTax non-sale-price--withoutTax{{#if price.with_tax}} price-section--minor{{/if}}" {{#unless price.non_sale_price_without_tax}}style="display: none;"{{/unless}}>
-            {{theme_settings.pdp-non-sale-price-label}}
-            <span data-product-non-sale-price-without-tax class="price price--non-sale">
-                {{price.non_sale_price_without_tax.formatted}}
-            </span>
-        </div>
         <div class="price-section price-section--withoutTax" {{#if schema_org}}itemprop="offers" itemscope itemtype="http://schema.org/Offer"{{/if}}>
             <span class="price-label" {{#if price.non_sale_price_without_tax}}style="display: none;"{{/if}}>
                 {{theme_settings.pdp-price-label}}
-            </span>
-            <span class="price-now-label" {{#unless price.non_sale_price_without_tax}}style="display: none;"{{/unless}}>
-                {{theme_settings.pdp-sale-price-label}}
             </span>
             <span data-product-price-without-tax class="price price--withoutTax{{#if price.with_tax}} price-section--minor{{/if}}">{{price.without_tax.formatted}}</span>
             {{#if schema_org}}
@@ -76,6 +67,12 @@ If you are making a change here or in price-range.html, you probably want to mak
             {{#if price.with_tax}}
                 <abbr title="{{lang 'products.excluding_tax'}}">{{lang 'products.price_without_tax' tax_label=price.tax_label}}</abbr>
             {{/if}}
+        </div>
+        <div class="price-section price-section--withoutTax non-sale-price--withoutTax{{#if price.with_tax}} price-section--minor{{/if}}" {{#unless price.non_sale_price_without_tax}}style="display: none;"{{/unless}}>
+            Traditional Retail: 
+            <span data-product-non-sale-price-without-tax class="price price--non-sale">
+                {{price.non_sale_price_without_tax.formatted}}
+            </span>
         </div>
     {{/if}}
     {{#if page_type '===' 'product'}}
