--- a/templates/components/products/price.html
+++ b/templates/components/products/price.html
@@ -68,6 +68,7 @@ If you are making a change here or in price-range.html, you probably want to mak
                 <abbr title="{{lang 'products.excluding_tax'}}">{{lang 'products.price_without_tax' tax_label=price.tax_label}}</abbr>
             {{/if}}
         </div>
+        {{> components/products/afterpay price=product.price.without_tax.value }}
         <div class="price-section price-section--withoutTax non-sale-price--withoutTax{{#if price.with_tax}} price-section--minor{{/if}}" {{#unless price.non_sale_price_without_tax}}style="display: none;"{{/unless}}>
             Traditional Retail: 
             <span data-product-non-sale-price-without-tax class="price price--non-sale">
