--- a/templates/components/products/product-view.html
+++ b/templates/components/products/product-view.html
@@ -11,50 +11,18 @@
     
 
     <section class="productView-images" data-image-gallery>
-        <figure class="productView-image"
-                data-image-gallery-main
-                {{#if product.main_image}}
-                data-zoom-image="{{getImage product.main_image 'zoom_size' (cdn theme_settings.default_image_product)}}"
-                {{/if}}
-                >
-            <div class="productView-img-container">
-                {{!-- Remove the surrounding a-element if there is no main image. --}}
-                {{#if product.main_image}}
-                    <a href="{{getImage product.main_image 'zoom_size' (cdn theme_settings.default_image_product)}}">
-                {{/if}}
-
-                <img class="productView-image--default lazyload"
-                     data-sizes="auto"
-                     src="{{cdn 'img/loading.svg'}}"
-                     data-src="{{getImage product.main_image 'product_size' (cdn theme_settings.default_image_product)}}"
-                     alt="{{product.main_image.alt}}" title="{{product.main_image.alt}}" data-main-image>
-
-                {{#if product.main_image}}
-                    </a>
-                {{/if}}
-            </div>
-        </figure>
-        <ul class="productView-thumbnails"{{#gt product.images.length 5}} data-slick='{
-                "infinite": false,
-                "mobileFirst": true,
-                "slidesToShow": 5,
-                "slidesToScroll": 1
-            }'{{/gt}}>
-            {{#each product.images}}
-                <li class="productView-thumbnail">
-                    <a
-                        class="productView-thumbnail-link"
-                        href="{{getImage this 'product_size' (cdn ../theme_settings.default_image_product)}}"
-                        data-image-gallery-item
-                        data-image-gallery-new-image-url="{{getImage this 'product_size' (cdn ../theme_settings.default_image_product)}}"
-                        data-image-gallery-zoom-image-url="{{getImage this 'zoom_size' (cdn ../theme_settings.default_image_product)}}">
-                        <img class="lazyload" data-sizes="auto" src="{{cdn 'img/loading.svg'}}" data-src="{{getImage this 'productview_thumb_size' (cdn ../theme_settings.default_image_product)}}" alt="{{this.alt}}" title="{{this.alt}}">
-                    </a>
-                </li>
-            {{/each}}
-        </ul>
+        <div class="flexslider">
+            <ul class="slides">
+                {{#each product.images}}
+                    <li data-thumb="{{getImage this 'product_size' (cdn ../theme_settings.default_image_product)}}">
+                        <img 
+                            src="{{getImage this 'product_size' (cdn ../theme_settings.default_image_product)}}"
+                        >
+                    </li>
+                {{/each}}
+            </ul>
+        </div>
     </section>
-
 
     <section class="productView-mobile-images" >
         <div class="image-viewer">
@@ -104,7 +72,6 @@
                 {{/or}}
             </div>
             {{{region name="product_below_price"}}}
-            {{> components/products/afterpay price=product.price.without_tax.value }}
         </div>
         <div class="productView-options">
             <form class="form" method="post" action="{{product.cart_url}}" enctype="multipart/form-data"
@@ -115,6 +82,10 @@
                     {{#each product.options}}
                         {{{dynamicComponent 'components/products/options'}}}
                     {{/each}}
+                </div>
+                <div class="pdp-fitguide-modelbox">
+                    <a class="size_finder" href="#">Fit Guide</a>
+                    <div class="modelbox" >Model is 6'2" wearing 32W x 32L</div>
                 </div>
                 {{#if product.can_purchase}}
                     {{> components/products/add-to-cart}}
