--- a/templates/layout/base.html
+++ b/templates/layout/base.html
@@ -8,6 +8,7 @@
         {{#block "head"}} {{/block}}
 
         <link href="{{ head.favicon }}" rel="shortcut icon">
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/flexslider/2.7.2/flexslider.min.css" rel="stylesheet"/>
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
         <script>
