--- a/templates/components/products/description-tabs.html
+++ b/templates/components/products/description-tabs.html
@@ -2,11 +2,13 @@
     <li class="tab is-active">
         <a class="tab-title" href="#tab-description">{{lang 'products.description'}}</a>
     </li>
-    {{#all product.custom_fields theme_settings.show_custom_fields_tabs}}
+    {{#each product.options }}
+        {{#if type '!==' 'Configurable_PickList_Set' }}
         <li class="tab">
-            <a class="tab-title" href="#tab-{{dashcase (lowercase (sanitize theme_settings.pdp-custom-fields-tab-label))}}">{{sanitize theme_settings.pdp-custom-fields-tab-label}}</a>
+            <a class="tab-title" href="#tab-{{dashcase (lowercase (sanitize display_name))}}">{{display_name}}</a>
         </li>
-    {{/all}}
+        {{/if}}
+    {{/each}}
     <!-- {{#all settings.show_product_reviews theme_settings.show_product_reviews_tabs product.reviews.total}}
         <li class="tab">
             <a class="tab-title productView-reviewTabLink" href="#tab-reviews">{{lang 'products.reviews.header' total=product.reviews.total}}</a>
@@ -17,24 +19,12 @@
     <div class="tab-content is-active" id="tab-description">
         {{{product.description}}}
     </div>
-   {{#if product.warranty}}
-       <div class="tab-content" id="tab-warranty">
-           {{{product.warranty}}}
-       </div>
-   {{/if}}
-   {{#all product.custom_fields theme_settings.show_custom_fields_tabs}}
-      <div class="tab-content" id="tab-{{dashcase (lowercase (sanitize theme_settings.pdp-custom-fields-tab-label))}}">
-         <dl class="productView-info">
-            {{#each product.custom_fields}}
-               <dt class="productView-info-name">{{name}}:</dt>
-               <dd class="productView-info-value">{{{value}}}</dd>
-            {{/each}}
-         </dl>
-      </div>
-   {{/all}}
-   {{#all settings.show_product_reviews theme_settings.show_product_reviews_tabs}}
-       <div class="tab-content" id="tab-reviews">
-           {{> components/products/reviews reviews=product.reviews product=product urls=urls}}
-       </div>
-   {{/all}}
+    {{#each product.options }}
+        {{#if type '!==' 'Configurable_PickList_Set' }}
+            <div class="tab-content modifier-options" id="tab-{{dashcase (lowercase (sanitize display_name))}}">
+                <textarea hidden >{{prefill}}</textarea>
+                <div></div>
+            </div>
+        {{/if}}
+    {{/each}}
 </div>
