Create Fitguide modal for mobile

--- a/assets/scss/components/foundation/modal/_modal.scss
+++ b/assets/scss/components/foundation/modal/_modal.scss
@@ -46,6 +46,8 @@
     text-align: center;
     text-decoration: none;
     z-index: zIndex("high");
+    top: 10px !important;
+    right: 10px !important;
 
     @include breakpoint("medium") {
         font-size: 32px;
